deployment-test.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loeye-spider-admin
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loeye-spider-admin
  template:
    metadata:
      labels:
        app: loeye-spider-admin
    spec:
      imagePullSecrets:
        - name: docker-dev-loeyae
      nodeSelector:
        role: enginee
      containers:
        - name: loeye-spider-admin
          image: docker.dev.loeyae.com/bys/cdspider_admin:7
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /app/loeye
              name: data-volume
      volumes:
        - name: data-volume
          hostPath:
            path: /mnt/data/spider-admin
            type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: loeye-spider-admin
  namespace: my-app
spec:
  ports:
    - port: 80
      targetPort: 5000
      name: web
    - port: 81
      targetPort: 23333
      name: srpc
    - port: 82
      targetPort: 24444
      name: rpc
  # clusterIP: None
  selector:
    app: loeye-spider-admin

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: loeye-spider-admin
  namespace: my-app
spec:
  rules:
    - host: sp-admin.dev.loeyae.com
      http:
        paths:
          - path: /
            backend:
              serviceName: loeye-spider-admin
              servicePort: web
    - host: sp-rpc.dev.loeyae.com
      http:
        paths:
          - path: /
            backend:
              serviceName: loeye-spider-admin
              servicePort: rpc
    - host: sp-srpc.dev.loeyae.com
      http:
        paths:
          - path: /
            backend:
              serviceName: loeye-spider-admin
              servicePort: srpc
  tls:
    - secretName: dev.loeyae-certs
